@@ -1,0 +1,4 @@
+\."#############################################################################
+\."$Id: cerebro_unregister_metric.3,v 1.1 2005-07-19 00:16:12 achu Exp $
+\."#############################################################################
+.so man3/cerebro_register_metric.3
