@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: libcerebro.3,v 1.15 2005-06-28 22:14:12 achu Exp $
+\."$Id: libcerebro.3,v 1.16 2005-07-19 00:16:12 achu Exp $
 \."#############################################################################
 .TH LIBCEREBRO 3 "August 2003" "LLNL" "LIBCEREBRO"
 .SH "NAME"
@@ -43,6 +43,14 @@ or down
 .BI "cerebro_metriclist_t cerebro_get_metric_names(cerebro_t handle);"
 .sp
 .BI "cerebro_nodelist_t cerebro_get_metric_data(cerebro_t handle, const char *metric_name);"
+.sp
+.BI "int cerebro_register_metric(cerebro_t handle, const char *metric_name);"
+.sp
+.BI "int cerebro_unregister_metric(cerebro_t handle, const char *metric_name);"
+.sp
+.BI "int cerebro_update_metric_value(cerebro_t handle, const char *metric_name, unsigned int metric_value_type, unsigned int metric_value_len, void *metric_value);"
+.sp
+.BI "int cerebro_restart_metric(cerebro_t handle, const char *metric_name);"
 .sp
 .BI "int cerebro_metriclist_length(cerebro_metriclist_t metriclist);"
 .sp
@@ -107,7 +115,9 @@ cerebro_get_hostname(3), cerebro_set_hostname(3), cerebro_get_port(3),
 cerebro_set_port(3), cerebro_get_timeout_len(3),
 cerebro_set_timeout_len(3), cerebro_get_flags(3),
 cerebro_set_flags(3), cerebro_get_metric_names(3),
-cerebro_get_metric_data(3), cerebro_metriclist_length(3),
+cerebro_get_metric_data(3), cerebro_register_metric(3),
+cerebro_unregister_metric(3), cerebro_update_metric_value(3),
+cerebro_restart_metric(3), cerebro_metriclist_length(3),
 cerebro_metriclist_destroy(3), cerebro_metriclist_iterator_create(3),
 cerebro_metriclist_iterator_metric_name(3),
 cerebro_metriclist_iterator_next(3),
